--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,6 +18,9 @@
 
 	{% block body %}{% endblock %}
 
+	{{ block('pe_our_locations_map') }}
+	{{ block('pe_contact_divider') }}
+
 	{{ block('footer') }}
 
 </div>
