--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -382,3 +382,20 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% block pe_our_locations_map %}
+	<section id="our-locations" class="page-section">
+		<div class="image-bg content-in fixed" data-background="{{ asset('bundles/site/images/sections/bg/locations-map.jpg') }}"></div>
+		<div class="container">
+			<div class="row text-center fact-counter white">
+				<div class="col-sm-12 bottom-xs-pad-30">
+					<div class="section-title invert-divider">
+						<!-- Heading -->
+						<h2 class="title">Hundreds of Physicians</h2>
+					</div>
+					<p><a href="#" class="btn btn-success">Locate A Physician Now</a></p>
+				</div>
+			</div>
+		</div>
+	</section>
+{% endblock %}
