--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -27,13 +27,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="row text-center">
-				<div class="section-title text-center">
-					<h2 class="title">Superior Quality Patient-Centered Services</h2>
-				</div>
-				<p>Scottsdale Health Partners, LLC is a young organization strategically launched to transform healthcare delivery in the local community. Over the last 3 years, more than 600 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and cover more than 35,000 patients.</p>
-				<p>Clinical Integration is key to improving healthcare quality while eliminating inefficient spending, and SHP's physician-led network offers the tools necessary to deliver best practice patient care.</p>
-			</div>
 		</div>
 	</section>
 	<section id="features" class="page-section light-bg">
@@ -94,7 +87,69 @@
 					</a>
 				</div>
 			</div>
-			<div class="clearfix"></div>
 		</div>
 	</section>
+	<section id="addition-info" class="page-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-md-6">
+					<div class="section-title text-left">
+						<!-- Heading -->
+						<h2 class="title">Medicare Shared Savings Program</h2>
+					</div>
+					<p>Scottsdale Health Partners is participating in the Medicare Shared Savings Program (MSSP) Accountable Care program. The SHP Accountable Care Organization (ACO) is made up of a subset of SHP's physicians who have agreed to meet an extra set of government requirements in order to give coordinated high quality care to their Medicare patients. When our ACO succeeds both in delivering high-quality care and spending health care dollars more wisely, we will share in the savings we helped to achieve for the Medicare program.</p>
+				</div>
+				<div class="col-sm-6 col-md-6">
+					<div class="section-title text-left">
+						<!-- Heading -->
+						<h2 class="title">Patients benefit from the ACO through</h2>
+					</div>
+					<ul class="features-list condensed features-list-left no-pad">
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-thumbs-up fa-2x"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<h5>Increased quality and personalization of healthcare</h5>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-remove fa-2x"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<h5>Elimination of unnecessary and repetitive tests</h5>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-align-justify fa-2x"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<h5>Cooperation and alignment of physicians in overall course of treatment</h5>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-user-md fa-2x"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<h5>Care coordinators who help patients navigate through the healthcare system</h5>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- addition-info -->
+	<div id="learn-more" class="light-bg call-to-action black text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<a class="black" href="{{ path('_a_c_o') }}">Learn more</a> about the ACO
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
