--- a/src/SiteBundle/Resources/views/About/missionVisionValues.html.twig
+++ b/src/SiteBundle/Resources/views/About/missionVisionValues.html.twig
@@ -1,7 +1,87 @@
+{% set title = 'Mission / Vision / Values' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:About:missionVisionValues{% endblock %}
 
 {% block body %}
-<h1>Welcome to the About:missionVisionValues page</h1>
+	<div class="page-header">
+		<div class="container">
+			<h1 class="title">{{ title }}</h1>
+		</div>
+	</div>
+	<!-- page-header -->
+	<section id="addition-info" class="page-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-md-6">
+					<div class="section-title text-left">
+						<!-- Heading -->
+						<h2 class="title">Mission</h2>
+					</div>
+					<p>Scottsdale Health Partners, LLC is a collaboration of medical professionals and a healthcare system which provides high quality, coordinated and innovative care for the patients and families we serve.</p>
+					<div class="section-title text-left">
+						<!-- Heading -->
+						<h2 class="title">Vision</h2>
+					</div>
+					<p>Scottsdale Health Partners, LLC will transform healthcare through coordinated, patient centered care of the highest quality and value.</p>
+				</div>
+				<div class="col-sm-6 col-md-6">
+					<div class="section-title text-left">
+						<!-- Heading -->
+						<h2 class="title">Values</h2>
+					</div>
+					<ul class="features-list condensed features-list-left no-pad">
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>High quality evidence based healthcare</p>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>Focused on patient experience</p>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>Physician driven</p>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>Transparent and fair</p>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>Fiscally sustainable</p>
+							</div>
+						</li>
+						<li class="features-list-item">
+							<!-- Icon -->
+							<i class="fa fa-check border-black"></i>
+							<div class="features-content">
+								<!-- Title -->
+								<p>Accountable to our patients and physicians</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
