added a couple more images to home page slider for more finished feel

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -28,6 +28,7 @@
 							<strong><span class="text-color">Find</span> a <br>Physician</strong>
 						</h2>
 					</div>
+					<img src="{{ asset('bundles/site/images/sections/slider/slide-1-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 				</li>
 				<!-- Slide Ends -->
 				<!-- Slide -->
@@ -94,6 +95,7 @@
 							<p>Click here to login or to request access<br/>to the SHP physician member website.</p>
 						</div>
 					</div>
+					<img src="{{ asset('bundles/site/images/sections/slider/slide-3-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 				</li>
 				<!-- Slide Ends -->
 			</ul>
