integrated FOS Rest Bundle for REST API calls to make physician directory fast. updated contact page with requested changes

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -52,6 +52,7 @@
 	'bundles/site/css/style.css'
 	'bundles/site/css/responsive.css'
 	'bundles/site/css/color.css'
+	'bundles/site/css/bootstrap-helper.css'
 	filter='uglifycss' filter='cssrewrite' %}
 	<link rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
