For physicians page created and complete

--- a/src/SiteBundle/Resources/views/About/whatWeDo.html.twig
+++ b/src/SiteBundle/Resources/views/About/whatWeDo.html.twig
@@ -18,7 +18,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<p>Scottsdale Health Partners has created a local network for physicians that have agreed to come together to deliver high quality, cost efficient care.  Through SHP, physician members have access to industry-leading communication and collaboration technologies, best practice care coordination services, and access to insurance value based contracts.</p>
+					<p>{{ company_name }} has created a local network for physicians that have agreed to come together to deliver high quality, cost efficient care.  Through SHP, physician members have access to industry-leading communication and collaboration technologies, best practice care coordination services, and access to insurance value based contracts.</p>
 				</div>
 			</div>
 		</div>
@@ -27,7 +27,7 @@
 		<div class="container">
 			<div class="section-title">
 				<!-- Heading -->
-				<h2 class="title">Fundamentally, Scottsdale Health Partners does the following</h2>
+				<h2 class="title">Fundamentally, {{ company_name }} does the following</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
