--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -17,7 +17,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Sart type 'a' ...."></p>
+					<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Start typing..."></p>
 				</div>
 			</div>
 			{#<div class="map-section"><div style="height: 376px;" data-content="Address: 5111 N. Scottsdale Rd." data-title="HonorHealth Medical Group - Chaparral" data-hue="#8eb4e3" data-type="roadmap" data-lng="-111.92494" data-lat="33.51181" data-zoomcontrol="false" data-zoom="15" class="map-canvas"></div></div>#}
